--- a/Client/CourseSnake/WebBuild/index.html
+++ b/Client/CourseSnake/WebBuild/index.html
@@ -43,9 +43,9 @@
     const buildUrl = "Build";
     const loaderUrl = buildUrl + "/WebBuild.loader.js";
     const config = {
-        dataUrl: buildUrl + "/WebBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/WebBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/WebBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/df438483dd4a0e9bd1d0634f648a737d.data.unityweb",
+        frameworkUrl: buildUrl + "/96285604e486fac023a2938155c95f1f.js.unityweb",
+        codeUrl: buildUrl + "/2d27e456b6bc4475c551ba9eb5487f09.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CourseSnake",
